js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
do
{
new
import
.
source
(
'
<
module
source
>
'
)
;
}
while
(
false
)
;
